--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Travel Website Html Css</title>
+	<title>Travel Website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="stylesheet"
@@ -202,7 +202,7 @@
 	<section class="newsletter">
 		<div class="news-text">
 			<h2>Newsletter</h2>
-			<p>Subscribe For more HTML, CSS, and <br> coding tutorials</p>
+			<p>Subscribe For more travel blogs</p>
 		</div>
 
 		<div class="send">
